# motoclip

./: .gitignore  AUTH_README.md  IMPLEMENTATION_SUMMARY.md  PROFILE_PAGE.md  README.md  auth-test.html  auth.js  comments.js  index.html  motorcycle.html  motorcycle.js  motorcycles-data.js  package-lock.json  package.json  profile.html  profile.js  psarz  psarz.pub  script.js  server.js  styles.css  test-images.html  video-1.html  video-10.html  video-11.html  video-12.html  video-2.html  video-3.html  video-4.html  video-5.html  video-6.html  video-7.html  video-8.html  video-9.html  video.html  video.js
mcp-news-generator/: README.md  mkdocs.yml  pyproject.toml
mcp-news-generator/docs/: faq.md  index.md
mcp-news-generator/docs/getting-started/: configuration.md  installation.md  quickstart.md
mcp-news-generator/docs/guide/: tools.md
mcp-news-generator/site/: 404.html  index.html  objects.inv  sitemap.xml
mcp-news-generator/site/faq/: index.html
mcp-news-generator/site/getting-started/configuration/: index.html
mcp-news-generator/site/getting-started/installation/: index.html
mcp-news-generator/site/getting-started/quickstart/: index.html
mcp-news-generator/site/guide/tools/: index.html
mcp-news-generator/site/search/: search_index.json
mcp-news-generator/src/mcp_news_generator/: __init__.py  server.py
